style: fix overflow hidden

--- a/src/containers/Settings/Settings.module.css
+++ b/src/containers/Settings/Settings.module.css
@@ -5,4 +5,5 @@
   flex-grow: 1;
   flex-direction: column;
   background-color: #f1f1f1;
+  overflow: hidden;
 }
